remove border style from v0; fix too wide check to use 680 (not 720)

--- a/css/index.scss
+++ b/css/index.scss
@@ -127,7 +127,6 @@ body{
     // 99.97% of the styles for this tag was taken from the new design page -- used for the *live* preview testing for osu!wiki editors only
     background: #333;
     padding: 45px;
-    border: 1px solid #ddd;
     border-radius: 0;
     font-family: Noto Sans,sans-serif;
     line-height: 1.35;
